--- a/client/templates/category.html
+++ b/client/templates/category.html
@@ -1,7 +1,9 @@
 <template name="funtsCategories">
-    <div class="btn-group">
-        {{#each funtsCategories}}
-            <label class="checkbox-inline"><input type="checkbox" name="category" value="{{categoryId}}">{{name}}</label>
-        {{/each}}
+    <div class="container">
+        <div class="btn-group">
+            {{#each funtsCategories}}
+                <label class="checkbox-inline"><input type="checkbox" name="category" value="{{categoryId}}">{{name}}</label>
+            {{/each}}
+        </div>
     </div>
 </template>
