--- a/client/templates/funts.html
+++ b/client/templates/funts.html
@@ -1,10 +1,12 @@
 <template name="funts">
     <h1>Фанты - онлайн</h1>
     {{> funtsCategories}}
+    <div class="container">
     {{#if funt}}
-        <p>{{funt.funt}}</p>
-        <a role="button" href="#" class="btn btn-success" id="doit">Сделано</a>
-    {{else}}
-        <p>Нет фантов в данной категории</p>
-    {{/if}}
+        <h1>{{funt.funt}}</h1>
+        <p><a role="button" href="#" class="btn btn-success" id="doit">Еще</a></p>
+            {{else}}
+        Нет фантов в данной категории
+            {{/if}}
+        </div>
 </template>
