--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -1,7 +1,7 @@
 <template name="layout">
     <div class="container container-table">
         {{> nav}}
-        <div class="row vertical-center-row">
+        <div class="row col-md-8 col-md-offset-4">
             {{> yield}}
         </div>
     </div>
