--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -1,8 +1,6 @@
 <template name="layout">
-    <div class="container container-table">
+    <div class="container-fluid container-table">
         {{> nav}}
-        <div class="row col-md-8 col-md-offset-4">
-            {{> yield}}
-        </div>
+        {{> yield}}
     </div>
 </template>
