--- a/client/templates/category.html
+++ b/client/templates/category.html
@@ -1,5 +1,5 @@
 <template name="funtsCategories">
-    <div class="container">
+    <div class="container-fluid">
         <div class="btn-group">
             {{#each funtsCategories}}
                 <label class="checkbox-inline"><input type="checkbox" name="category" value="{{categoryId}}">{{name}}</label>
