Верстка по центру экрана.

--- a/client/templates/funts.html
+++ b/client/templates/funts.html
@@ -1,7 +1,9 @@
 <template name="funts">
-    <h1>Фанты - онлайн</h1>
+    <div class="container-fluid" >
+        <h1>Фанты - онлайн</h1>
+    </div>
     {{> funtsCategories}}
-    <div class="container funt">
+    <div class="container-fluid">
         <div id="card">
             <figure class="back" id="turnFront"></figure>
             <figure class="front" id="turnBack">
