--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -1,5 +1,5 @@
 <template name="layout">
-    <div class="container-fluid container-table">
+    <div class="container-fluid text-center">
         {{> nav}}
         {{> yield}}
     </div>
