--- a/client/templates/nav.html
+++ b/client/templates/nav.html
@@ -1,14 +1,14 @@
 <template name="nav">
+<div class="container-fluid">
     <nav class="navbar navbar-default">
-        <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">/</a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="navbar-collapse collapse text-center">
                 <ul class="nav navbar-nav">
                     <li><a href="/about">О проекте</a></li>
                 </ul>
             </div>
-        </div>
     </nav>
+</div>
 </template>
