--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -1,5 +1,6 @@
 <template name="layout">
     <div class="container-fluid text-center">
+        {{> loginButtons}}
         {{> nav}}
         {{> yield}}
     </div>
