Выравнивание по левому краю в проекте

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -1,6 +1,6 @@
 <template name="about">
     <h1>О проекте</h1>
-    <p>
+    <p class="text-left">
         Проект создан 15.10.15 для того, чтобы весело проводить время со своими дочерьми. На текущий момент проект развивается и я с удовольствием
         принимаю фанты с помощью специальной формы.
     </p>
